# CHANGE LOG

All notable changes to this project will be documented in this file.

This project adheres to [Semantic Versioning](http://semver.org).

This document is formatted according to the principles of [Keep A CHANGELOG](http://keepachangelog.com).

----
## [Unreleased] - In Git

### Removed

### Added

### Changed

### Fixed

## [4.1.3] - 2017-05-04

### Added
* (Go) Implement CLI
  ([#145](https://github.com/cucumber/cucumber/issues/145)
   [#162](https://github.com/cucumber/cucumber/pull/162)
   by [l3pp4rd])

### Fixed
* (JavaScript) Fix gherkin/javascript/examples so Gherkin loads in browser
  ([#197](https://github.com/cucumber/cucumber/pull/197)
   by [aslakhellesoy])
* (JavaScript) Don't depend on fs in the library
  ([#196](https://github.com/cucumber/cucumber/pull/196)
   by [aslakhellesoy])
* (Python) Fix executable
  ([#194](https://github.com/cucumber/cucumber/pull/194)
   [#157](https://github.com/cucumber/cucumber/issues/157)
   by [aslakhellesoy])
* (C) Fix Windows related issues
  ([#193](https://github.com/cucumber/cucumber/pull/193)
   [#168](https://github.com/cucumber/cucumber/issues/168)
   by [brasmusson])
* (C) Fix `uri` in pickles on C command line
  ([#176](https://github.com/cucumber/cucumber/pull/176)
   [#165](https://github.com/cucumber/cucumber/issues/165)
   by [brasmusson])
* (Go) Add missing error handling
  ([#170](https://github.com/cucumber/cucumber/pull/170)
   by [l3pp4rd])
* (Go) Fix build on go 1.8
  ([#137](https://github.com/cucumber/cucumber/issues/137)
   [#162](https://github.com/cucumber/cucumber/pull/162)
   by [l3pp4rd])
* (Python) Fix build on python 3.4
  ([#138](https://github.com/cucumber/cucumber/issues/138)
   [#158](https://github.com/cucumber/cucumber/pull/158)
   by [brasmusson])

## [4.1.2] - 2017-05-03
Something went wrong during this release - do not use

## [4.1.1] - 2017-03-16

### Added
* (JavaScript, Ruby, Python) Packages include executabled.